[package]
name = "genesis"
version = "0.0.1"
description = "A library for generating statically-typed ECS worlds."
authors = ["StygianLightning <denrellum@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StygianLightning/genesis"
keywords = ["ecs", "entity"]

