[package]
name = "genesis"
version = "0.1.1"
description = "A library for generating statically-typed ECS worlds."
authors = ["StygianLightning <denrellum@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StygianLightning/genesis"
keywords = ["ecs", "entity"]

[workspace]
members = [
    "genesis-tests"
]

[dependencies]
genesis-impl = { path = "genesis-impl", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0"

