[package]
name = "genesis-impl"
version = "0.2.2"
description = "proc macro crate for genesis"
authors = ["StygianLightning <denrellum@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StygianLightning/genesis"
keywords = ["ecs", "entity", "macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
